# pyproject_template

./: .pylintrc  .travis.yml  Dockerfile  README.md  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json  pyproject.toml  travis.yml
.github/: branch_protected.sh  pull_request_template.md
.github/workflow/: dockerimage.yml
.github/workflows/: dockerimage.yml
decorator_demo/utils/: decorator.py
decorator_demo/utils/file_validation/: base.py  factory.py  gzip_validator.py
project/: main.py
tests/: test_main.py
