[tool.poetry]
name = "python_project_template"
version = "0.1.0"
description = ""
authors = ["davidtnfsh <davidtnfsh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
isort = "^5.6.4"

[tool.poetry.dev-dependencies]
safety = "^1.8.7"
bandit = "^1.6.2"
pytest-cov = "^2.8.1"
black = "^19.10b0"
mypy = "^0.770"
pytest = "^5.4.1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
